# dead-reckoning-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/: claude_code_eval.py  eval.py  synthetic_eval.py  toolbench_data_example.py  toolbench_eval.py
dead_reckoning/: __init__.py  adapters.py  adapters_claude_code.py
dead_reckoning/core/: __init__.py  agent.py  confidence_gate.py  world_model.py
examples/: demo.py
results/: claude_code_results.csv  claude_code_v2.csv  synthetic_real.csv  toolbench_real.csv  toolbench_real_v2.csv
results/20260330_181736/: llm_call_log.json  metrics.csv  report.md  summary.json
results/20260330_181736/haikupartialtest/: llm_call_log.json
results/20260330_181736/traces/: G1_000_dead_reckoning.json  G1_000_react.json  G1_001_dead_reckoning.json  G1_001_react.json  G1_002_dead_reckoning.json  G1_002_react.json  G1_003_dead_reckoning.json  G1_003_react.json  G1_004_dead_reckoning.json  G1_004_react.json  G2_000_dead_reckoning.json  G2_000_react.json  G2_001_dead_reckoning.json  G2_001_react.json  G2_002_dead_reckoning.json  G2_002_react.json  G3_000_dead_reckoning.json  G3_000_react.json  G3_001_dead_reckoning.json  G3_001_react.json
results/20260330_183113/: llm_call_log.json  metrics.csv  opuspartialtest.txt  report.md  summary.json
results/20260330_183113/traces/: G1_000_dead_reckoning.json  G1_000_react.json  G1_001_dead_reckoning.json  G1_001_react.json  G1_002_dead_reckoning.json  G1_002_react.json  G1_003_dead_reckoning.json  G1_003_react.json  G1_004_dead_reckoning.json  (+11 more)
tests/: test_core.py
