[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dead-reckoning-agent"
version = "0.1.0"
description = "LLM agent that navigates tasks like a ship navigates open water — 60-80% fewer LLM calls"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["llm", "agent", "ai", "framework", "cost-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.25", "openai>=1.0"]
dev = ["pytest", "pytest-asyncio", "mypy"]

[project.urls]
Homepage = "https://github.com/your-org/dead-reckoning-agent"
Documentation = "https://github.com/your-org/dead-reckoning-agent#readme"
Issues = "https://github.com/your-org/dead-reckoning-agent/issues"

[tool.setuptools.packages.find]
include = ["dead_reckoning*"]
